--- a/.github/environments/environment.yml
+++ b/.github/environments/environment.yml
@@ -1,1 +1,20 @@
+name: bikeability-env
 
+channels:
+  - conda-forge
+  - defaults
+
+dependencies:
+  # required
+  - pandas
+  - numpy
+  - geopandas
+  - osmnx
+  - requests
+  - scikit-learn
+  - h3
+
+  # testing and linting
+  - pytest
+  - flake8
+  - black
