--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -1,4 +1,4 @@
-name: Test Bikeability on different OS
+name: Test Bikeability on Ubuntu
 
 on:
   push:
@@ -6,10 +6,9 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [windows]
         python-version: ['3.10']
 
     steps:
@@ -21,35 +20,38 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Create and update virtual environment
-        run: | 
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
           python -m venv bikeability
-          if [[ "$OSTYPE" == "msys" ]]; then
-            source bikeability/Scripts/activate
-          else
-            source bikeability/bin/activate
-          fi
+          source bikeability/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m pip install pytest
         shell: bash
 
-      - name: Install bikeability
+      - name: Install bikeability from TestPyPI
         run: |
-          if [[ "$OSTYPE" == "msys" ]]; then
-            source bikeability/Scripts/activate
-          else
-            source bikeability/bin/activate
-          fi
+          source bikeability/bin/activate
           pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
+        shell: bash
+
+      - name: Run linters
+        run: |
+          source bikeability/bin/activate
+          black .
+          flake8 . --max-line-length=120
         shell: bash
 
       - name: Run tests
         run: |
-          if [[ "$OSTYPE" == "msys" ]]; then
-            source bikeability/Scripts/activate
-          else
-            source bikeability/bin/activate
-          fi
+          source bikeability/bin/activate
           pytest tests/
         shell: bash
