--- a/.github/environments/test-environment.yml
+++ b/.github/environments/test-environment.yml
@@ -8,7 +8,8 @@ dependencies:
   # required
   - pandas==2.1.4
   - numpy==1.26.2
-  - geopandas== 0.14.4
+  - geopandas== 0.14.1
+  - fiona==1.9.6
   - osmnx== 1.8.0
   - requests== 2.31.0
   - scikit-learn== 1.3.2
