--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -10,6 +10,8 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10']
+        include:
+          - environment-file: .github/environments/requirements-bikeablity.txt
 
     steps:
       - name: Checkout repository
@@ -33,14 +35,20 @@ jobs:
           python -m venv bikeability
           source bikeability/bin/activate
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          python -m pip install pytest
+          pip install -r ${{ matrix.environment-file }}
         shell: bash
 
       - name: Install bikeability from TestPyPI
         run: |
           source bikeability/bin/activate
           pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
+        shell: bash
+
+      - name: Run linters
+        run: |
+          source bikeability/bin/activate
+          black .
+          flake8 . --max-line-length=120
         shell: bash
 
       - name: Run tests
