--- a/.github/workflows/test-bikeability-v2.yml
+++ b/.github/workflows/test-bikeability-v2.yml
@@ -5,17 +5,18 @@ on:
     branches: [ main ]
 
 jobs:
-  setup-environment:
-    name: Set up Python Environment
-    runs-on: ubuntu-latest
+  lint-and-test:
+    name: Lint and Test
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest]
         python-version: ['3.10']
         include:
           - environment-file: .github/environments/requirements-bikeability.txt
 
     steps:
-      - name: Check out Git repository
+      - name: Check out repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -39,44 +40,21 @@ jobs:
           pip install -r ${{ matrix.environment-file }}
         shell: bash
 
-  run-linters:
-    name: Run Linters
-    runs-on: ubuntu-latest
-    needs: setup-environment
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v4
-
-      - name: Activate environment
+      - name: Run linters
         run: |
           source bikeability/bin/activate
-        shell: bash
-
-      - name: Run linters
-        shell: bash -l {0}
-        run: |
           black .
           flake8 . --max-line-length=120
-
-  test-bikeability:
-    name: Test Bikeability
-    runs-on: ubuntu-latest
-    needs: setup-environment
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v4
-
-      - name: Activate environment
-        run: |
-          source bikeability/bin/activate
         shell: bash
 
       - name: Install bikeability from TestPyPI
         run: |
+          source bikeability/bin/activate
           pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
         shell: bash
 
       - name: Run tests
         run: |
+          source bikeability/bin/activate
           pytest tests/
         shell: bash
