--- a/.github/workflows/test-bikeability-v2.yml
+++ b/.github/workflows/test-bikeability-v2.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           source lint-env/bin/activate
           black .
-          flake8 . --max-line-length=160 --exclude=lint-env/lib/python3.10/site-packages
+          flake8 . --ignore=E203,F811,W503,E501 --exclude=lint-env/lib/python3.10/site-packages
 
       - name: Install bikeability from TestPyPI
         run: |
