--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -2,7 +2,7 @@ name: Publish Python 🐍 distributions 📦 to testPyPI
 
 on:
   push:
-    branches: []#'release'
+    branches: ['release_testpypi']#'release'
     # release:
     # types: [published]
 
