--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -9,34 +9,34 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']
-        include:
-          - environment-file: .github/environments/requirements-bikeability.txt
+        python-version: ['3.10', "3.11", "3.12"]
+ #       include:
+ #         - environment-file: .github/environments/requirements-bikeability.txt
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv and set the Python version
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Cache pip dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
+#      - name: Cache pip dependencies
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.cache/pip
+#          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pip-${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m venv bikeability
-          source bikeability/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r ${{ matrix.environment-file }}
-        shell: bash
+#      - name: Install dependencies
+#        run: |
+#          python -m venv bikeability
+#          source bikeability/bin/activate
+#          python -m pip install --upgrade pip
+#          pip install -r ${{ matrix.environment-file }}
+#        shell: bash
 
       - name: Install bikeability from TestPyPI
         run: |
