--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -2,7 +2,7 @@ name: Test Bikeability on Ubuntu
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, fork/johanngrobe/chore/dependencies-update ]
 
 jobs:
   test:
