--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install bikeability from TestPyPI
         run: |
-          source bikeability/bin/activate
+          source .venv/activate
           pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
         shell: bash
 
