--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -40,12 +40,10 @@ jobs:
 
       - name: Install bikeability from TestPyPI
         run: |
-          source .venv/Scripts/activate
-          pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
+          uv python install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
         shell: bash
 
       - name: Run tests
         run: |
-          source .venv/Scripts/activate
-          pytest tests/
+          uv pytest tests/
         shell: bash
