--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install bikeability from TestPyPI
         run: |
-          uv python install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple bikeability
+          uv python install bikeability
         shell: bash
 
       - name: Run tests
