--- a/.github/workflows/test-bikeability.yml
+++ b/.github/workflows/test-bikeability.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+
 #      - name: Cache pip dependencies
 #        uses: actions/cache@v3
 #        with:
@@ -38,12 +44,12 @@ jobs:
 #          pip install -r ${{ matrix.environment-file }}
 #        shell: bash
 
-      - name: Install bikeability from TestPyPI
-        run: |
-          uv pip install bikeability
-        shell: bash
+#      - name: Install bikeability from TestPyPI
+#        run: |
+#          uv pip install bikeability
+#        shell: bash
 
       - name: Run tests
         run: |
-          uv pytest tests/
+          uv run pytest tests/
         shell: bash
